--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,11 @@
+#common:
+#    resource: "@CommonBundle/Resources/config/routing.yml"
+#    prefix:   /
+
 advert:
     resource: "@AdvertBundle/Resources/config/routing.yml"
     prefix:   /
 
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+#app:
+#    resource: "@AppBundle/Controller/"
+#    type:     annotation
