--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "doctrine/mongodb-odm-bundle": "3.0.1"
+        "doctrine/mongodb-odm-bundle": "~3.0.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
