--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,6 @@ advert:
     resource: "@AdvertBundle/Resources/config/routing.yml"
     prefix:   /
 
-#app:
-#    resource: "@AppBundle/Controller/"
-#    type:     annotation
+app:
+    resource: "@AppBundle/Resources/config/routing.yml"
+    prefix:   /
