--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2,6 +2,6 @@ app_homepage:
     path:     /
     defaults: { _controller: AppBundle:Default:index }
 
-app_name:
-    path:     /{name}
-    defaults: { _controller: AppBundle:Default:name }
+#app_name:
+#    path:     /{name}
+#    defaults: { _controller: AppBundle:Default:name }
