--- a/src/AdvertBundle/Resources/config/routing.yml
+++ b/src/AdvertBundle/Resources/config/routing.yml
@@ -14,6 +14,11 @@ advert_edit_page:
     path:     /advert/{id}/edit
     defaults: { _controller: AdvertBundle:Advert:edit }
 
+get_models_by_make:
+    path:   /advert/make/models
+    defaults: { _controller: AdvertBundle:Advert:getModelsByMake }
+    requirements: { _method: "post" }
+
 test_page:
     path:     /test
     defaults: { _controller: AdvertBundle:Test:index }
