--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+search:
+    resource: "@SearchBundle/Resources/config/routing.yml"
+    prefix:   /
+
 common:
     resource: "@CommonBundle/Resources/config/routing.yml"
     prefix:   /
