--- a/src/AdvertBundle/Resources/config/routing.yml
+++ b/src/AdvertBundle/Resources/config/routing.yml
@@ -1,6 +1,3 @@
-advert_homepage:
-    path:     /advert
-    defaults: { _controller: AdvertBundle:Default:index }
 
 advert_add_page:
     path:   /advert/add
@@ -8,7 +5,7 @@ advert_add_page:
 
 advert_detail_page:
     path:     /advert/{id}
-    defaults: { _controller: AdvertBundle:Default:detail }
+    defaults: { _controller: AdvertBundle:Detail:index }
 
 advert_edit_page:
     path:     /advert/{id}/edit
