--- a/src/SearchBundle/Resources/config/routing.yml
+++ b/src/SearchBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 search_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: SearchBundle:Default:index }
+    path:     /
+    defaults: { _controller: SearchBundle:Search:index }
+
+search_adverts_homepage:
+    path:     /search/adverts
+    defaults: { _controller: SearchBundle:Search:getAdverts }
