--- a/src/AdvertBundle/Resources/config/routing.yml
+++ b/src/AdvertBundle/Resources/config/routing.yml
@@ -8,7 +8,7 @@ advert_edit_page:
     defaults: { _controller: AdvertBundle:Advert:index }
 
 advert_detail_page:
-    path:     /advert/{id}
+    path:     /advert/{slug}
     defaults: { _controller: AdvertBundle:Detail:index }
 
 get_model_by_make:
