--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "doctrine/mongodb-odm-bundle": "~3.0.1",
         "doctrine/doctrine-fixtures-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "stof/doctrine-extensions-bundle": "^1.2"
+        "stof/doctrine-extensions-bundle": "^1.2",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
